--- a/app/src/main/res/drawable/ic_star.xml
+++ b/app/src/main/res/drawable/ic_star.xml
@@ -4,10 +4,10 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="@color/transparent"
+        android:fillColor="@color/yellow"
         android:pathData="M12,17.75l-6.172,3.245l1.179,-6.873l-5,-4.867l6.9,-1l3.086,-6.253l3.086,6.253l6.9,1l-5,4.867l1.179,6.873z"
         android:strokeWidth="1"
-        android:strokeColor="@color/black"
+        android:strokeColor="@color/yellow"
         android:strokeLineCap="round"
         android:strokeLineJoin="round" />
 </vector>
