--- a/app/src/main/res/layout/item_list_stock.xml
+++ b/app/src/main/res/layout/item_list_stock.xml
@@ -5,6 +5,8 @@
     android:id="@+id/stockList"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clipToPadding="false"
     android:overScrollMode="never"
+    android:padding="8dp"
     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
     tools:listitem="@layout/item_stock" />
