--- a/app/src/main/res/values/font_montserrat.xml
+++ b/app/src/main/res/values/font_montserrat.xml
@@ -7,10 +7,19 @@
         <item name="android:fontWeight" tools:targetApi="o">700</item>
         <item name="android:textFontWeight" tools:targetApi="p">700</item>
         <item name="android:fontFamily">@font/montserrat</item>
+        <item name="android:textSize">32sp</item>
+    </style>
+
+    <style name="TextAppearance.App.Headline2" parent="TextAppearance.MaterialComponents.Headline1">
+        <item name="fontFamily">@font/montserrat</item>
+        <item name="fontWeight">700</item>
+        <item name="android:fontWeight" tools:targetApi="o">700</item>
+        <item name="android:textFontWeight" tools:targetApi="p">700</item>
+        <item name="android:fontFamily">@font/montserrat</item>
         <item name="android:textSize">24sp</item>
     </style>
 
-    <style name="TextAppearance.App.Headline2" parent="TextAppearance.MaterialComponents.Headline6">
+    <style name="TextAppearance.App.Headline3" parent="TextAppearance.MaterialComponents.Headline6">
         <item name="fontFamily">@font/montserrat</item>
         <item name="fontWeight">700</item>
         <item name="android:fontWeight" tools:targetApi="o">700</item>
