--- a/app/src/main/res/layout/fragment_stock_details.xml
+++ b/app/src/main/res/layout/fragment_stock_details.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:paddingHorizontal="8dp"
     android:paddingVertical="16dp"
-    tools:context=".ui.stockDetails.StockDetailsFragment">
+    tools:context=".ui.stock.StockDetailsFragment">
 
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/back"
