--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="green">#FF24B25D</color>
     <color name="red">#FFB22424</color>
     <color name="yellow">#FFFFCA1C</color>
+    <color name="light_pink">#FFF0F4F7</color>
 </resources>
