--- a/app/src/main/res/layout/fragment_stock_details.xml
+++ b/app/src/main/res/layout/fragment_stock_details.xml
@@ -66,21 +66,22 @@
         <com.google.android.material.tabs.TabItem
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Chart" />
+            android:text="@string/chart" />
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Summary " />
+            android:text="@string/summary" />
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="News" />
+            android:text="@string/news" />
 
     </com.google.android.material.tabs.TabLayout>
 
     <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:clipToPadding="false"
