--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -24,4 +24,15 @@
         <item name="buttonTint">@color/favorite</item>
     </style>
 
+    <style name="Theme.RadioButton" parent="Widget.AppCompat.CompoundButton.RadioButton">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:gravity">center</item>
+        <item name="android:button">@color/transparent</item>
+        <item name="android:background">@drawable/bg_stock</item>
+        <item name="android:backgroundTint">@color/light_pink</item>
+        <item name="android:layout_margin">8dp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textAppearance">@style/TextAppearance.App.Headline1</item>
+    </style>
+
 </resources>
