--- a/app/src/main/res/layout/fragment_stock_details.xml
+++ b/app/src/main/res/layout/fragment_stock_details.xml
@@ -15,12 +15,12 @@
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
             android:background="@color/transparent"
+            android:scaleType="fitXY"
             android:src="@drawable/ic_back"
-            app:layout_constraintBottom_toBottomOf="@+id/company"
-            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintBottom_toBottomOf="@id/company"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/ticker" />
 
@@ -54,8 +54,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/company"
-            app:tabMode="scrollable" />
+            app:layout_constraintTop_toBottomOf="@+id/company" />
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/viewPager"
