--- a/app/src/main/res/layout/item_ticker.xml
+++ b/app/src/main/res/layout/item_ticker.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
     android:background="@drawable/bg_stock"
-    android:backgroundTint="@color/light_pink"
+    android:backgroundTint="@color/grey_light"
     android:paddingHorizontal="16dp"
     android:paddingVertical="8dp"
     android:textAppearance="@style/TextAppearance.App.Subtitle"
